--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,9 +10,9 @@
   <main>
     <div class="card">
       <div class="header">
-        <h1>📦 Parcel Dashboard</h1>
-        <button id="toggle-dark">🌙</button>
-        <button id="logout-button">🚪</button>
+        <h1 >📦 Parcel Dashboard</h1>
+        <button id="toggle-dark" style="margin-left: 15px;">🌙</button>
+        <button id="logout-button" style="margin-left: 15px; margin-right: 15px;">🚪</button>
       </div>
       <form method="POST" action="/tracking" class="tracking-form">
         <input type="text" name="number" placeholder="Enter Tracking Number" required>
