--- a/server/public/admin.html
+++ b/server/public/admin.html
@@ -10,6 +10,9 @@
   <main>
     <div class="card">
       <h1>👑 Admin Dashboard</h1>
+      <button id="toggle-dark" style="margin-left: 15px;">🌙</button>
+      <button id="logout-button" style="margin-left: 15px; margin-right: 15px;">🚪</button>
+      <button id="qr-button">📷</button>
       <h2>Users</h2>
       <div id="users-list"></div>
 
