--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Parcel Dashboard</title>
   <link rel="stylesheet" href="/style.css">
-  <script defer src="/script.js"></script>
 </head>
 <body>
   <main>
@@ -13,6 +12,7 @@
         <h1 >📦 Parcel Dashboard</h1>
         <button id="toggle-dark" style="margin-left: 15px;">🌙</button>
         <button id="logout-button" style="margin-left: 15px; margin-right: 15px;">🚪</button>
+        <button id="qr-button">📷</button>
       </div>
       <form method="POST" action="/tracking" class="tracking-form">
         <input type="text" name="number" placeholder="Enter Tracking Number" required>
