--- a/server/public/register.html
+++ b/server/public/register.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <title>Register</title>
   <link rel="stylesheet" href="/style.css">
-  <script defer src="/script.js"></script>
 </head>
 <body>
   <main>
     <div class="card">
       <h1>📦 Register</h1>
+      <button id="qr-button">📷</button>
       <form class="register-form" method="POST" action="/register">
         <input type="text" name="username" placeholder="Username" required>
         <input type="password" name="password" placeholder="Password" required>
