--- a/server/public/admin.html
+++ b/server/public/admin.html
@@ -9,10 +9,18 @@
 <body>
   <main>
     <div class="card">
+      <div class="header">
       <h1>👑 Admin Dashboard</h1>
-      <button id="toggle-dark" style="margin-left: 15px;">🌙</button>
-      <button id="logout-button" style="margin-left: 15px; margin-right: 15px;">🚪</button>
-      <button id="qr-button">📷</button>
+      <button id="toggle-dark" style="margin-left: 15px;">
+            <img id="moon-icon" src="/moon.png" style="width: 24px; height: 24px; object-fit: contain; vertical-align: middle;" alt="toggle-dark">
+        </button>
+        <button id="logout-button" style="margin-left: 15px;">
+          <img id="logout-icon" src="/logout.png" style="width: 24px; height: 24px; object-fit: contain; vertical-align: middle;" alt="Logout">
+        </button>
+        <button id="qr-button" style="margin-left: 15px; margin-right: 15px;">
+          <img id="qr-icon" src="/qr-code.png" style="width: 24px; height: 24px; object-fit: contain; vertical-align: middle;" alt="QR Code">
+        </button>
+      </div>
       <h2>Users</h2>
       <div id="users-list"></div>
 
