--- a/server/public/index.html
+++ b/server/public/index.html
@@ -9,11 +9,21 @@
   <main>
     <div class="card">
       <div class="header">
-        <h1 >📦 Parcel Dashboard</h1>
-        <button id="toggle-dark" style="margin-left: 15px;">🌙</button>
-        <button id="logout-button" style="margin-left: 15px; margin-right: 15px;">🚪</button>
-        <button id="qr-button">📷</button>
+        <h1 >
+          <img src="/parcel.png" style="width: 40px; height: 40px; object-fit: contain; vertical-align: middle;" alt="Package Icon">
+          Parcel Dashboard
+        </h1>
+        <button id="toggle-dark" style="margin-left: 15px;">
+            <img id="moon-icon" src="/moon.png" style="width: 24px; height: 24px; object-fit: contain; vertical-align: middle;" alt="toggle-dark">
+        </button>
+        <button id="logout-button" style="margin-left: 15px;">
+          <img id="logout-icon" src="/logout.png" style="width: 24px; height: 24px; object-fit: contain; vertical-align: middle;" alt="Logout">
+        </button>
+        <button id="qr-button" style="margin-left: 15px; margin-right: 15px;">
+          <img id="qr-icon" src="/qr-code.png" style="width: 24px; height: 24px; object-fit: contain; vertical-align: middle;" alt="QR Code">
+        </button>
       </div>
+      <div class="dorm-number"></div>
       <form method="POST" action="/tracking" class="tracking-form">
         <input type="text" name="number" placeholder="Enter Tracking Number" required>
         <button type="submit">Add</button>
