--- a/server/public/login.html
+++ b/server/public/login.html
@@ -8,8 +8,15 @@
 <body>
   <main>
     <div class="card">
-      <h1>📦 Login</h1>
-      <button id="qr-button">📷</button>
+      <div class="header">
+        <h1>
+          <img src="/parcel.png" style="width: 40px; height: 40px; object-fit: contain; vertical-align: middle;" alt="Package Icon">
+          Login
+        </h1>
+        <button id="qr-button" style="margin-left: 15px; margin-right: 15px;">
+            <img id="qr-icon" src="/qr-code.png" style="width: 24px; height: 24px; object-fit: contain; vertical-align: middle;" alt="QR Code">
+        </button>
+      </div>
       <form method="POST" action="/login" class="login-form">
         <input type="text" name="username" placeholder="Username" required>
         <input type="password" name="password" placeholder="Password" required>
