--- a/server/public/qr_check.html
+++ b/server/public/qr_check.html
@@ -10,14 +10,21 @@
   <main>
     <div class="card">
       <div class="header">
-        <h1>📦 Parcel QR Check</h1>
-        <button id="toggle-dark" style="margin-left: 15px;">🌙</button>
-        <button id="logout-button" style="margin-left: 15px; margin-right: 15px;">🚪</button>
+        <h1>
+            <img src="/parcel.png" style="width: 40px; height: 40px; object-fit: contain; vertical-align: middle;" alt="Package Icon">
+            Parcel QR Check
+        </h1>
+        <button id="toggle-dark" style="margin-left: 15px;">
+            <img id="moon-icon" src="/moon.png" style="width: 24px; height: 24px; object-fit: contain; vertical-align: middle;" alt="toggle-dark">
+        </button>
+        <button id="logout-button" style="margin-left: 15px; margin-right: 15px;">
+          <img id="logout-icon" src="/logout.png" style="width: 24px; height: 24px; object-fit: contain; vertical-align: middle;" alt="Logout">
+        </button>
       </div>
 
       <div class="content">
         <h2>Scan QR Code</h2>
-        <video id="preview" width="300" height="200" autoplay playsinline style="border:1px solid #ccc;"></video>
+        <video id="preview" width="auto" height="auto" autoplay playsinline style="border:1px solid #ccc;"></video>
         <canvas id="qr-canvas" hidden></canvas>
         <button id="start-scan">▶ Start Scan</button>
         <button id="stop-scan">⏹ Stop Scan</button>
@@ -26,7 +33,7 @@
         <input type="text" id="tracking-input" placeholder="Enter tracking number">
         <button id="check-tracking">Check</button>
 
-        <div id="result" style="margin-top: 20px; font-weight: bold;"></div>
+        <div id="result" style="margin-top: 20px; font-weight: bold; display: none;"></div>
       </div>
     </div>
   </main>
