--- a/server/public/admin.html
+++ b/server/public/admin.html
@@ -10,15 +10,15 @@
   <main>
     <div class="card">
       <div class="header">
-      <h1>👑 Admin Dashboard</h1>
-      <button id="toggle-dark" style="margin-left: 15px;">
-            <img id="moon-icon" src="/moon.png" style="width: 24px; height: 24px; object-fit: contain; vertical-align: middle;" alt="toggle-dark">
+      <h1><a href="/" style="text-decoration: none; color: inherit;">👑 Admin Dashboard</a></h1>
+      <button id="toggle-dark">
+            <img id="moon-icon" src="/moon.png" style="object-fit: contain; vertical-align: middle;" alt="toggle-dark">
         </button>
-        <button id="logout-button" style="margin-left: 15px;">
-          <img id="logout-icon" src="/logout.png" style="width: 24px; height: 24px; object-fit: contain; vertical-align: middle;" alt="Logout">
+        <button id="logout-button">
+          <img id="logout-icon" src="/logout.png" style="object-fit: contain; vertical-align: middle;" alt="Logout">
         </button>
-        <button id="qr-button" style="margin-left: 15px; margin-right: 15px;">
-          <img id="qr-icon" src="/qr-code.png" style="width: 24px; height: 24px; object-fit: contain; vertical-align: middle;" alt="QR Code">
+        <button id="qr-button">
+          <img id="qr-icon" src="/qr-code.png" style="object-fit: contain; vertical-align: middle;" alt="QR Code">
         </button>
       </div>
       <h2>Users</h2>
