--- a/server/public/index.html
+++ b/server/public/index.html
@@ -9,18 +9,20 @@
   <main>
     <div class="card">
       <div class="header">
-        <h1 >
-          <img src="/parcel.png" style="width: 40px; height: 40px; object-fit: contain; vertical-align: middle;" alt="Package Icon">
-          Parcel Dashboard
+        <h1>
+          <a href="/" style="text-decoration: none; color: inherit;">
+            <img src="/parcel.png" style="object-fit: contain; vertical-align: middle;" alt="Package Icon">
+            Parcel Dashboard
+          </a>
         </h1>
-        <button id="toggle-dark" style="margin-left: 15px;">
-            <img id="moon-icon" src="/moon.png" style="width: 24px; height: 24px; object-fit: contain; vertical-align: middle;" alt="toggle-dark">
+        <button id="toggle-dark">
+            <img id="moon-icon" src="/moon.png" style="object-fit: contain; vertical-align: middle;" alt="toggle-dark">
         </button>
-        <button id="logout-button" style="margin-left: 15px;">
-          <img id="logout-icon" src="/logout.png" style="width: 24px; height: 24px; object-fit: contain; vertical-align: middle;" alt="Logout">
+        <button id="logout-button">
+          <img id="logout-icon" src="/logout.png" style="object-fit: contain; vertical-align: middle;" alt="Logout">
         </button>
-        <button id="qr-button" style="margin-left: 15px; margin-right: 15px;">
-          <img id="qr-icon" src="/qr-code.png" style="width: 24px; height: 24px; object-fit: contain; vertical-align: middle;" alt="QR Code">
+        <button id="qr-button">
+          <img id="qr-icon" src="/qr-code.png" style="object-fit: contain; vertical-align: middle;" alt="QR Code">
         </button>
       </div>
       <div class="dorm-number"></div>
@@ -29,7 +31,7 @@
         <button type="submit">Add</button>
       </form>
       <h2>Tracking Numbers</h2>
-      <p class="muted">No tracking numbers added yet.</p>
+      <p class="mutedI">No tracking numbers added yet.</p>
     </div>
   </main>
   <script src="/index.js" defer></script>
