--- a/server/public/login.html
+++ b/server/public/login.html
@@ -10,11 +10,13 @@
     <div class="card">
       <div class="header">
         <h1>
-          <img src="/parcel.png" style="width: 40px; height: 40px; object-fit: contain; vertical-align: middle;" alt="Package Icon">
-          Login
+          <a href="/" style="text-decoration: none; color: inherit;">
+            <img src="/parcel.png" style="object-fit: contain; vertical-align: middle;" alt="Package Icon">
+            Login
+          </a>
         </h1>
-        <button id="qr-button" style="margin-left: 15px; margin-right: 15px;">
-            <img id="qr-icon" src="/qr-code.png" style="width: 24px; height: 24px; object-fit: contain; vertical-align: middle;" alt="QR Code">
+        <button id="qr-button">
+            <img id="qr-icon" src="/qr-code.png" style="object-fit: contain; vertical-align: middle;" alt="QR Code">
         </button>
       </div>
       <form method="POST" action="/login" class="login-form">
@@ -23,7 +25,7 @@
         <button type="submit">Login</button>
       </form>
       <p class="muted" id="message-area"></p>
-      <p>Don’t have an account? <a href="/register">Register</a></p>
+      <p>Don’t have an account? <a href="/register" style="text-decoration: none; color: rgb(53, 53, 250);">Register</a></p>
     </div>
   </main>
   <script src="/login.js" defer></script>
