--- a/server/public/qr_check.html
+++ b/server/public/qr_check.html
@@ -11,14 +11,16 @@
     <div class="card">
       <div class="header">
         <h1>
-            <img src="/parcel.png" style="width: 40px; height: 40px; object-fit: contain; vertical-align: middle;" alt="Package Icon">
+          <a href="/" style="text-decoration: none; color: inherit;">
+            <img src="/parcel.png" style="object-fit: contain; vertical-align: middle;" alt="Package Icon">
             Parcel QR Check
+          </a>
         </h1>
-        <button id="toggle-dark" style="margin-left: 15px;">
-            <img id="moon-icon" src="/moon.png" style="width: 24px; height: 24px; object-fit: contain; vertical-align: middle;" alt="toggle-dark">
+        <button id="toggle-dark">
+            <img id="moon-icon" src="/moon.png" style="object-fit: contain; vertical-align: middle;" alt="toggle-dark">
         </button>
-        <button id="logout-button" style="margin-left: 15px; margin-right: 15px;">
-          <img id="logout-icon" src="/logout.png" style="width: 24px; height: 24px; object-fit: contain; vertical-align: middle;" alt="Logout">
+        <button id="logout-button">
+          <img id="logout-icon" src="/logout.png" style="object-fit: contain; vertical-align: middle;" alt="Logout">
         </button>
       </div>
 
