--- a/server/public/register.html
+++ b/server/public/register.html
@@ -10,11 +10,13 @@
     <div class="card">
       <div class="header">
         <h1>
-          <img src="/parcel.png" style="width: 40px; height: 40px; object-fit: contain; vertical-align: middle;" alt="Package Icon">
-          Register
+          <a href="/" style="text-decoration: none; color: inherit;">
+            <img src="/parcel.png" style="object-fit: contain; vertical-align: middle;" alt="Package Icon">
+            Register
+          </a>
         </h1>
-        <button id="qr-button" style="margin-left: 15px; margin-right: 15px;">
-            <img id="qr-icon" src="/qr-code.png" style="width: 24px; height: 24px; object-fit: contain; vertical-align: middle;" alt="QR Code">
+        <button id="qr-button">
+            <img id="qr-icon" src="/qr-code.png" style="object-fit: contain; vertical-align: middle;" alt="QR Code">
         </button>
       </div>
       <form class="register-form" method="POST" action="/register">
@@ -29,7 +31,7 @@
         <button type="submit">Register</button>
       </form>
       <p class="muted" id="message-area"></p>
-      <p>Already have an account? <a href="/login">Login</a></p>
+      <p>Already have an account? <a href="/login" style="text-decoration: none; color: blue;">Login</a></p>
     </div>
   </main>
   <script src="/register.js" defer></script>
